--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,16 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/KintonExpress.jar
+dist.jar=${dist.dir}/KintonExpress_rombak.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/KintonExpress
+dist.jlink.output=${dist.jlink.dir}/KintonExpress_rombak
 excludes=
+file.reference.mysql-connector-java-5.1.46.jar=/home/iolux/Downloads/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.46.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=KintonExpress
+jlink.launcher.name=KintonExpress_rombak
 main.class=com.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
