--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/KintonExpress_rombak
 excludes=
 file.reference.mysql-connector-java-5.1.46.jar=/home/iolux/Downloads/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46.jar
+file.reference.mysql-connector-java-8.0.30.jar=/home/iolux/Downloads/mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.46.jar}
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
